Added a useless plot to see if it renders properly

--- a/Assignment 1.Rmd
+++ b/Assignment 1.Rmd
@@ -97,7 +97,7 @@ Tip: look through the chapter on data transformation in R for data science (http
 
 
 ```{r}
-
+plot(demographic$Ethnicity, demographic$Diagnosis)
 ```
 
 2b. Find a way to homogeneize the way "visit" is reported (visit1 vs. 1).
