--- a/Assignment 1.Rmd
+++ b/Assignment 1.Rmd
@@ -238,7 +238,8 @@ NewMergedData$Diagnosis <- str_replace_all(NewMergedData$Diagnosis, "B", "TD")
 
 #We now save the data to a csv-file
 clean_data <- NewMergedData
-write.csv(clean_data, file = "A1_clean_data")
+write.csv2(clean_data, file = "A1_clean_data.csv")
+
 
 ```
 
